tests/negative/gold/type3_test.gold
tests/negative/type3_test.toit:4:24: error: Unexpected token: :=
  field -> NonExisting := null
                       ^~
tests/negative/type3_test.toit:4:12: error: Unresolved type: 'NonExisting'
  field -> NonExisting := null
           ^~~~~~~~~~~
tests/negative/type3_test.toit:4:3: error: Method doesn't return a value
  field -> NonExisting := null
  ^~~~~
Compilation failed.
